# al-arabiyya

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-image.yml
al_arabiyya/: __init__.py
al_arabiyya/api/: apps.py  urls.py
al_arabiyya/api/tests/: __init__.py  test_views.py
al_arabiyya/apps/home/: apps.py  models.py
al_arabiyya/apps/home/tests/: __init__.py  test_models.py
al_arabiyya/cms/: apps.py
al_arabiyya/ui/: apps.py  urls.py  views.py
al_arabiyya/ui/static/al_arabiyya/: README.md  package-lock.json  package.json
al_arabiyya/ui/static/al_arabiyya/css/: app.css
al_arabiyya/ui/templates/al_arabiyya/components/: form.html  lang_switch.html  pagination.html
al_arabiyya/ui/templatetags/: ar.py
al_arabiyya/ui/tests/: __init__.py  test_views.py
